new attractions page(glacier), index.css page

--- a/Attractions.html
+++ b/Attractions.html
@@ -31,40 +31,43 @@
 <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <!-- navigation -->
-    <div class="container">
-      <nav class="navbar navbar-inverse" role="navigation">
-           <div class="navbar-header">
-               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-                   <span class="sr-only">Toggle navigation</span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="index.html">McCay Wedding</a>
-             </div>
+<!-- navigation -->
+<div class="container">
+  <nav class="navbar navbar-inverse" role="navigation">
+       <div class="navbar-header">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+               <span class="sr-only">Toggle navigation</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+           </button>
+           <a class="navbar-brand" href="index.html">McCay Wedding</a>
+         </div>
 
-             <div class="collapse navbar-collapse" id="navbar-collapse-1">
-               <ul class="nav navbar-nav">
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">MT Attractions</a></li>
-                 </ul>
-               </div>
-          </nav>
-        </div>
-        <!--end nav container-->
+         <div class="collapse navbar-collapse" id="navbar-collapse-1">
+           <ul class="nav navbar-nav">
+             <li><a href="#">Home</a></li>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">Home</a></li>
+             <li><a href="Attractions.html">MT Attractions</a></li>
+             </ul>
+           </div>
+      </nav>
+    </div>
+    <!--end nav container-->
 
-          <div class="text-center">
+    <h1 title="Montana">So you're coming to Montana! There are a lot of great things to do and see!</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-06">
+      <h3>Glacier National Park</h3>
+      <h4>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4>
+      <img src="photos/glacier-national-park.jpg" alt="Glacier National Park">
+      <h5>Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></h5>
+    </div>
+  </div>
+</div>
 
-
-            <h1>We're getting married!</h1>
-            <br>
-            <h2>On: 30th of June, 2018</h2>
-            <h2>At: 5:00pm</h2>
-          </div>
-  </body>
-</html>
+</body>
