flex-box for attractions

--- a/Attractions.html
+++ b/Attractions.html
@@ -61,13 +61,21 @@
     <h1 title="Montana">So you're coming to Montana! There are a lot of great things to do and see!</h1>
 <div class="container">
   <div class="row">
-    <div class="col-md-06">
+    <div class="glacier">
       <h3>Glacier National Park</h3>
       <h4>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4>
-      <img src="photos/glacier-national-park.jpg" alt="Glacier National Park">
+      <img class="attractionPhotos" src="photos/glacier-national-park.jpg" alt="Glacier National Park">
       <h5>Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></h5>
     </div>
-  </div>
-</div>
+
+    <div class="yellowstone">
+      <h3>Yellowstone National Park</h3>
+      <h4>You've already made the trek to Montana, why not travel to the famous Yellowstone National Park?</h4>
+      <img class="attractionPhotos" src="photos/yellowstone.jpg" alt="Yellowstone National Park">
+      <h5>Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></h5>
+    </div>
+
+  </div> <!--close row-->
+</div> <!-- close container-->
 
 </body>
