fixed href to attractions on index page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                  <li><a href="#">Home</a></li>
                  <li><a href="#">Home</a></li>
                  <li><a href="#">Home</a></li>
-                 <li><a href="#">MT Attractions</a></li>
+                 <li><a href="Attractions.html">MT Attractions</a></li>
                  </ul>
                </div>
           </nav>
