more flexbox, new attractions, borders

--- a/Attractions.html
+++ b/Attractions.html
@@ -76,6 +76,23 @@
     </div>
 
   </div> <!--close row-->
+  <div class="row">
+    <div class="buddha">
+      <h3>Garden of 1000 Buddha's</h3>
+      <h4>Just down the road in Arlee Montana you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4>
+      <img class="attractionPhotos" src="photos/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
+      <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
+    </div>
+
+    <div class="flathead">
+      <h3>Flathead Lake</h3>
+      <h4>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4>
+      <img class="attractionPhotos" src="photos/flathead.jpg" alt="Flathead Lake">
+      <h5>Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></h5>
+    </div>
+
+  </div> <!--close row-->
+
 </div> <!-- close container-->
 
 </body>
