flexbox adjustments, pixel pushing!

--- a/Attractions.html
+++ b/Attractions.html
@@ -57,8 +57,10 @@
       </nav>
     </div>
     <!--end nav container-->
+    <div class="mt">
+      <h1 title="Montana">So you're coming to Montana! There are a lot of great things to do and see!</h1>
 
-    <h1 title="Montana">So you're coming to Montana! There are a lot of great things to do and see!</h1>
+    </div>
 <div class="container">
   <div class="row">
     <div class="glacier">
