--- a/index.html
+++ b/index.html
@@ -1,70 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>McCay Wedding</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-
-  <link href="https://fonts.googleapis.com/css?family=Alegreya|Cinzel|Sansita" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-  <!-- GOOOGLE MAPS -->
-  <script src="//maps.google.com/maps/api/js?key=AIzaSyDjzADB3Uj6feRK51w8IlKMIL5KF_BqbKE"></script>
-  <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
-  <script src="//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js" type="text/javascript"></script>
-
-<!-- END GOOGLE MAPS -->
-<link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-    <!-- navigation -->
-    <div class="container">
-      <nav class="navbar navbar-inverse" role="navigation">
-           <div class="navbar-header">
-               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-                   <span class="sr-only">Toggle navigation</span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="index.html">McCay Wedding</a>
-             </div>
-
-             <div class="collapse navbar-collapse" id="navbar-collapse-1">
-               <ul class="nav navbar-nav">
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="Attractions.html">MT Attractions</a></li>
-                 </ul>
-               </div>
-          </nav>
-        </div>
-        <!--end nav container-->
-
-          <div class="text-center">
-
-
-            <h1>We're getting married!</h1>
-            <br>
-            <h2>On: 30th of June, 2018</h2>
-            <h2>At: 5:00pm</h2>
-          </div>
-  </body>
-</html>
+"welcome page" 
