content for pages

--- a/Attractions.html
+++ b/Attractions.html
@@ -1,1 +1,122 @@
-"attractions page" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>McCay Wedding</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Alegreya|Cinzel|Sansita" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+  <!-- GOOOGLE MAPS -->
+  <script src="//maps.google.com/maps/api/js?key=AIzaSyDjzADB3Uj6feRK51w8IlKMIL5KF_BqbKE"></script>
+  <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+  <script src="//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js" type="text/javascript"></script>
+
+<!-- END GOOGLE MAPS -->
+<link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+<!-- navigation -->
+<div class="container">
+  <nav class="navbar navbar-inverse" role="navigation">
+       <div class="navbar-header">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+               <span class="sr-only">Toggle navigation</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+           </button>
+           <a class="navbar-brand" href="index.html">McCay Wedding</a>
+         </div>
+
+         <div class="collapse navbar-collapse" id="navbar-collapse-1">
+           <ul class="nav navbar-nav">
+             <li><a href="#">Home</a></li>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">Home</a></li>
+             <li><a href="Attractions.html">MT Attractions</a></li>
+             </ul>
+           </div>
+      </nav>
+    </div>
+    <!--end nav container-->
+    <div class="mt">
+      <h1 title="Montana">So you're going to Montana?
+    <br>There are a lot of great things to do and see!</h1>
+
+    </div>
+<div class="container">
+
+  <div class="row">
+    <div class="glacier">
+      <h3>Glacier National Park</h3>
+      <h4>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4>
+      <h5>Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></h5>
+    </div>
+
+    <div class="glacierPhoto">
+      <img class="attractionPhotos" src="photos/glacier-national-park.jpg" alt="Glacier National Park">
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="yellowstone">
+      <img class="attractionPhotos" src="photos/yellowstone.jpg" alt="Yellowstone National Park">
+    </div>
+    <div class="yellowstonePhoto">
+      <h3>Yellowstone National Park</h3>
+      <h4>You've already made the trek to Montana, why not travel to the famous Yellowstone National Park?</h4>
+        <h5>Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></h5>
+    </div>
+
+  </div> <!--close row-->
+
+
+  <div class="row">
+
+    <div class="buddha">
+      <h3>Garden of 1000 Buddha's</h3>
+      <h4>Just down the road in Arlee Montana you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4>
+      <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
+    </div>
+    <div class="buddhaPhoto">
+      <img class="attractionPhotos" src="photos/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
+    </div>
+
+  </div> <!--close row-->
+
+  <div class="row">
+
+    <div class="flatheadPhoto">
+      <img class="attractionPhotos" src="photos/flathead.jpg" alt="Flathead Lake">
+    </div>
+    <div class="flathead">
+      <h3>Flathead Lake</h3>
+      <h4>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4>
+      <h5>Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></h5>
+    </div>
+
+  </div>
+
+</div> <!-- close container-->
+
+</body>
