RSVP form, picture for mainpage

--- a/Attractions.html
+++ b/Attractions.html
@@ -50,7 +50,7 @@
              <li><a href="#">Home</a></li>
              <li><a href="#">Home</a></li>
              <li><a href="#">Home</a></li>
-             <li><a href="#">Home</a></li>
+             <li><a href="RSVP.html">RSVP</a></li>
              <li><a href="Attractions.html">MT Attractions</a></li>
              </ul>
            </div>
