--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                  <li><a href="#">Home</a></li>
                  <li><a href="#">Home</a></li>
                  <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
+                 <li><a href="RSVP.html">RSVP</a></li>
                  <li><a href="Attractions.html">MT Attractions</a></li>
                  </ul>
                </div>
@@ -63,8 +63,9 @@
 
             <h1>We're getting married!</h1>
             <br>
-            <h2>On: 30th of June, 2018</h2>
-            <h2>At: 5:00pm</h2>
+            <h2> 30th June, 2018</h2>
+            <h2>5:00pm</h2>
           </div>
+          <img id="jenereus"src="photos/img_0153.JPG" alt="Jessica and Nereus" style="width:304px;height:228px;">
   </body>
 </html>
