--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
-
+<link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Alegreya|Cinzel|Sansita" rel="stylesheet">
@@ -57,15 +57,23 @@
           </nav>
         </div>
         <!--end nav container-->
-
+      </div>
+      <div id="daisy">
+        <img src="photos/daisy.png" alt="">
+      </div>
           <div class="text-center">
 
+            <div class="gettingMarried">
 
             <h1>We're getting married!</h1>
             <br>
             <h2> 30th June, 2018</h2>
             <h2>5:00pm</h2>
           </div>
-          <img id="jenereus"src="photos/img_0153.JPG" alt="Jessica and Nereus" style="width:304px;height:228px;">
+
+          <div id="sunflower">
+            <img src="photos/Sunflower.png" alt="Sunflower">
+          </div>
+
   </body>
 </html>
