attractions css file, flexbox to index

--- a/Attractions.html
+++ b/Attractions.html
@@ -28,7 +28,7 @@
   <script src="//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js" type="text/javascript"></script>
 
 <!-- END GOOGLE MAPS -->
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="Attractions.css">
   </head>
   <body>
 <!-- navigation -->
@@ -57,6 +57,7 @@
       </nav>
     </div>
     <!--end nav container-->
+
     <div class="mt">
       <h1 title="Montana">So you're going to Montana?
     <br>There are a lot of great things to do and see!</h1>
