flexbox center sunflower on page with text centered on image

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>McCay Wedding</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
     <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
@@ -23,6 +24,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="index.css">
+<script src="index.js"></script>
   </head>
   <body>
     <!-- navigation -->
@@ -51,13 +53,10 @@
           </nav>
         </div>
         <!--end nav container-->
-      <div class="flexbox">
-
-        <!-- <div id="daisy">
-          <img src="photos/daisy.png" height="300px" alt="daisy">
-        </div> -->
-
-        <div class="text-center">
+      <div class="flexbox-container">
+        <div class="call-out">
+          <div class="sunflower">
+            <!-- <img src="photos/Sunflower.jpg" alt=""> -->
           <div class="gettingMarried">
             <h1>We're getting married!</h1>
             <br>
@@ -66,9 +65,11 @@
           </div>
         </div>
 
-        <div id="sunflower">
-          <img src="photos/Sunflower.png" height="700px" alt="Sunflower">
         </div>
+
+      </div> <!--close flex container-->
+
+
 
       </div>
   </body>
