text formatting, spinning sunflower

--- a/Attractions.html
+++ b/Attractions.html
@@ -46,7 +46,7 @@
 
          <div class="collapse navbar-collapse" id="navbar-collapse-1">
            <ul class="nav navbar-nav">
-             <li><a href="#">Home</a></li>
+             <li><a href="location.html">Location</a></li>
              <li><a href="#">Home</a></li>
              <li><a href="#">Home</a></li>
              <li><a href="#">Home</a></li>
@@ -57,67 +57,69 @@
       </nav>
     </div>
     <!--end nav container-->
+      <div class="boxForWholePage">
 
-    <div class="mt">
-      <h1 title="Montana">So you're going to Montana?
-    <br>There are a lot of great things to do and see!</h1>
+
+      <div class="mt">
+        <h1 title="Montana">So you're going to Montana?
+      <br>There are a lot of great things to do and see!</h1>
+
+      </div>
+  <div class="container">
+
+    <div class="row">
+      <div class="glacier">
+        <h3>Glacier National Park</h3>
+        <h4>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4>
+        <h5>Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></h5>
+      </div>
+
+      <div class="glacierPhoto">
+        <img class="attractionPhotos" src="photos/glacier-national-park.jpg" alt="Glacier National Park">
+      </div>
 
     </div>
-<div class="container">
 
-  <div class="row">
-    <div class="glacier">
-      <h3>Glacier National Park</h3>
-      <h4>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4>
-      <h5>Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></h5>
+    <div class="row">
+
+      <div class="yellowstone">
+        <img class="attractionPhotos" src="photos/yellowstone.jpg" alt="Yellowstone National Park">
+      </div>
+      <div class="yellowstonePhoto">
+        <h3>Yellowstone National Park</h3>
+        <h4>You've already made the trek to Montana, why not travel to the famous Yellowstone National Park?</h4>
+          <h5>Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></h5>
+      </div>
+
+    </div> <!--close row-->
+
+
+    <div class="row">
+
+      <div class="buddha">
+        <h3>Garden of 1000 Buddha's</h3>
+        <h4>Just down the road in Arlee Montana you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4>
+        <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
+      </div>
+      <div class="buddhaPhoto">
+        <img class="attractionPhotos" src="photos/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
+      </div>
+
+    </div> <!--close row-->
+
+    <div class="row">
+
+      <div class="flatheadPhoto">
+        <img class="attractionPhotos" src="photos/flathead.jpg" alt="Flathead Lake">
+      </div>
+      <div class="flathead">
+        <h3>Flathead Lake</h3>
+        <h4>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4>
+        <h5>Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></h5>
+      </div>
+
+      </div>
     </div>
-
-    <div class="glacierPhoto">
-      <img class="attractionPhotos" src="photos/glacier-national-park.jpg" alt="Glacier National Park">
-    </div>
-
-  </div>
-
-  <div class="row">
-
-    <div class="yellowstone">
-      <img class="attractionPhotos" src="photos/yellowstone.jpg" alt="Yellowstone National Park">
-    </div>
-    <div class="yellowstonePhoto">
-      <h3>Yellowstone National Park</h3>
-      <h4>You've already made the trek to Montana, why not travel to the famous Yellowstone National Park?</h4>
-        <h5>Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></h5>
-    </div>
-
-  </div> <!--close row-->
-
-
-  <div class="row">
-
-    <div class="buddha">
-      <h3>Garden of 1000 Buddha's</h3>
-      <h4>Just down the road in Arlee Montana you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4>
-      <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
-    </div>
-    <div class="buddhaPhoto">
-      <img class="attractionPhotos" src="photos/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
-    </div>
-
-  </div> <!--close row-->
-
-  <div class="row">
-
-    <div class="flatheadPhoto">
-      <img class="attractionPhotos" src="photos/flathead.jpg" alt="Flathead Lake">
-    </div>
-    <div class="flathead">
-      <h3>Flathead Lake</h3>
-      <h4>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4>
-      <h5>Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></h5>
-    </div>
-
-  </div>
-
-</div> <!-- close container-->
+  </div> <!-- close container-->
 
 </body>
