--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
              <div class="collapse navbar-collapse" id="navbar-collapse-1">
                <ul class="nav navbar-nav">
-                 <li><a href="#">Home</a></li>
+                 <li><a href="location.html">Location</a></li>
                  <li><a href="#">Home</a></li>
                  <li><a href="#">Home</a></li>
                  <li><a href="#">Home</a></li>
@@ -53,21 +53,52 @@
           </nav>
         </div>
         <!--end nav container-->
-      <div class="flexbox-container">
-        <div class="call-out">
-          <div class="sunflower">
-            <!-- <img src="photos/Sunflower.jpg" alt=""> -->
-          <div class="gettingMarried">
-            <h1>We're getting married!</h1>
-            <br>
-            <h2> 30th June, 2018</h2>
-            <h2>5:00pm</h2>
+
+        <div class="flexbox-container">
+          <div class="call-out">
+            <div class="sunflower">
+              <!-- <img src="photos/Sunflower.jpg" alt=""> -->
+            <div class="getting">
+              <h1 id="gettingMarried">We're getting married!</h1>
+              <br>
+              <h2 id="weddingDate"> 30th June, 2018</h2>
+              <h2 id="weddingTime">5:00pm</h2>
+            </div>
           </div>
+
+          </div>
+
+        </div> <!--close flex container-->
+
+
+
+
+
+
+        <div id="container">
+        <div id="circle">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="300px" height="300px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+            <defs>
+                <path id="criclePath" d=" M 150, 150 m -120, 0 a 120,120 0 0,1 240,0 a 120,120 0 0,1 -240,0 "/>
+            </defs>
+            <circle cx="150" cy="150" r="150" fill="none"/>
+            <g>
+                <use xlink:href="#criclePath" fill="none"/>
+                <!-- <text fill="#333333">
+                    <textPath xlink:href="#criclePath">Jessica and Nereus say 'I do', June 30th, 2018.</textPath> -->
+                </text>
+            </g>
+        </svg>
+        </div>
         </div>
 
-        </div>
 
-      </div> <!--close flex container-->
+
+
+
+
+
+
 
 
 
