--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               <h2 id="weddingTime">5:00pm</h2>
             </div>
           </div>
+          <img src="photos/jessicaNereus.png" alt="" height="400px">
 
           </div>
 
