cell phone responsive

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <h2 id="weddingTime">5:00pm</h2>
             </div>
           </div>
-          <img src="photos/jessicaNereus.png" alt="Happy Couple" >
+          <img src="photos/jessicaNereus.png" alt="Happy Couple" max-height="165px" >
 
           </div>
 
