change photos folder name to images

--- a/Attractions.html
+++ b/Attractions.html
@@ -75,7 +75,7 @@
       </div>
 
       <div class="glacierPhoto">
-        <img class="attractionPhotos" src="photos/glacier-national-park.jpg" alt="Glacier National Park">
+        <img class="attractionPhotos" src="images/glacier-national-park.jpg" alt="Glacier National Park">
       </div>
 
     </div>
@@ -83,7 +83,7 @@
     <div class="row">
 
       <div class="yellowstone">
-        <img class="attractionPhotos" src="photos/yellowstone.jpg" alt="Yellowstone National Park">
+        <img class="attractionPhotos" src="images/yellowstone.jpg" alt="Yellowstone National Park">
       </div>
       <div class="yellowstonePhoto">
         <h3>Yellowstone National Park</h3>
@@ -102,7 +102,7 @@
         <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
       </div>
       <div class="buddhaPhoto">
-        <img class="attractionPhotos" src="photos/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
+        <img class="attractionPhotos" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
       </div>
 
     </div> <!--close row-->
@@ -110,7 +110,7 @@
     <div class="row">
 
       <div class="flatheadPhoto">
-        <img class="attractionPhotos" src="photos/flathead.jpg" alt="Flathead Lake">
+        <img class="attractionPhotos" src="images/flathead.jpg" alt="Flathead Lake">
       </div>
       <div class="flathead">
         <h3>Flathead Lake</h3>
