--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="flexbox-container">
           <div class="call-out">
             <div class="sunflower">
-              <!-- <img src="photos/Sunflower.jpg" alt=""> -->
+              <!-- <img src="images/Sunflower.jpg" alt=""> -->
             <div class="getting">
               <h1 id="gettingMarried">We're getting married!</h1>
               <br>
@@ -65,7 +65,7 @@
               <h2 id="weddingTime">5:00pm</h2>
             </div>
           </div>
-          <img src="photos/jessicaNereus.png" alt="Happy Couple" max-height="165px" >
+          <img src="images/jessicaNereus.png" alt="Happy Couple" max-height="165px" >
 
           </div>
 
