coding for responsive- cell phone

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <h2 id="weddingTime">5:00pm</h2>
             </div>
           </div>
-          <img src="images/jessicaNereus.png" alt="Happy Couple" max-height="165px" >
+          <img id="happy" src="images/jessicaNereus.png" alt="Happy Couple" max-height="165px" >
 
           </div>
 
@@ -76,22 +76,6 @@
 
 
 
-        <div id="container">
-        <div id="circle">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="300px" height="300px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
-            <defs>
-                <path id="criclePath" d=" M 150, 150 m -120, 0 a 120,120 0 0,1 240,0 a 120,120 0 0,1 -240,0 "/>
-            </defs>
-            <circle cx="150" cy="150" r="150" fill="none"/>
-            <g>
-                <use xlink:href="#criclePath" fill="none"/>
-                <!-- <text fill="#333333">
-                    <textPath xlink:href="#criclePath">Jessica and Nereus say 'I do', June 30th, 2018.</textPath> -->
-                </text>
-            </g>
-        </svg>
-        </div>
-        </div>
 
 
 
