added jumbotron, removed image, responsive design for phone and desktop

--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
                  </ul>
                </div>
           </nav>
+
+        </div> <!--end nav container-->
+        <div class="container">
+          <div class="jumbotron">
+
+          </div>
+
         </div>
-        <!--end nav container-->
 
         <div class="flexbox-container">
           <div class="call-out">
@@ -64,11 +70,10 @@
               <h2 id="weddingTime">5:00pm</h2>
             </div>
 
-          <img id="happy" src="images/jessicaNereus.png" alt="Happy Couple" max-height="165px" >
 
           </div>
-
         </div> <!--close flex container-->
+
 
 
   </body>
