--- a/Attractions.html
+++ b/Attractions.html
@@ -119,7 +119,7 @@
       </div>
 
       </div>
-    </div>
-  </div> <!-- close container-->
+    </div> <!-- close container-->
+  </div> <!--close box for whole page-->
 
 </body>
