two new text boxes with background, responsive for phone and desktop, remove background color for phone size

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+<link href="https://fonts.googleapis.com/css?family=Bad+Script|Great+Vibes|Indie+Flower|Nothing+You+Could+Do" rel="stylesheet">
 <link rel="stylesheet" href="index.css">
 <script src="index.js"></script>
+
   </head>
   <body>
     <!-- navigation -->
@@ -73,7 +74,24 @@
 
           </div>
         </div> <!--close flex container-->
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="boxed">
+                <h4>Jessica McCay and Nereus Brown's <br>
+                  wedding and reception will be at the McCay Residence in Arlee, MT</h4>
+                </div>
 
+            </div>
+            <div class="col-xs-6">
+              <div class="boxed">
+                <h4>The Ceremony commences at 6 PM</h4>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
 
 
   </body>
