mobile responsive changes for attractions page

--- a/Attractions.html
+++ b/Attractions.html
@@ -47,16 +47,20 @@
          <div class="collapse navbar-collapse" id="navbar-collapse-1">
            <ul class="nav navbar-nav">
              <li><a href="location.html">Location</a></li>
-             <li><a href="#">Home</a></li>
-             <li><a href="#">Home</a></li>
-             <li><a href="#">Home</a></li>
              <li><a href="RSVP.html">RSVP</a></li>
              <li><a href="Attractions.html">MT Attractions</a></li>
+              <li><a href="accomodation.html">Accomodation</a></li>
              </ul>
            </div>
       </nav>
     </div>
     <!--end nav container-->
+    <div class="container">
+      <div class="jumbotron">
+
+      </div>
+
+    </div>
       <div class="boxForWholePage">
 
 
@@ -69,9 +73,12 @@
 
     <div class="row">
       <div class="glacier">
+        <div class="boxForDescriptions">
+
         <h3>Glacier National Park</h3>
         <h4>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4>
         <h5>Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></h5>
+      </div>
       </div>
 
       <div class="glacierPhoto">
@@ -86,9 +93,11 @@
         <img class="attractionPhotos" src="images/yellowstone.jpg" alt="Yellowstone National Park">
       </div>
       <div class="yellowstonePhoto">
-        <h3>Yellowstone National Park</h3>
-        <h4>You've already made the trek to Montana, why not travel to the famous Yellowstone National Park?</h4>
+        <div class="boxForDescriptions">
+          <h3>Yellowstone National Park</h3>
+          <h4>You've already made the trek to Montana, why not travel to the famous Yellowstone National Park?</h4>
           <h5>Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></h5>
+        </div>
       </div>
 
     </div> <!--close row-->
@@ -97,9 +106,11 @@
     <div class="row">
 
       <div class="buddha">
-        <h3>Garden of 1000 Buddha's</h3>
-        <h4>Just down the road in Arlee Montana you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4>
-        <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
+        <div class="boxForDescriptions">
+          <h3>Garden of 1000 Buddha's</h3>
+          <h4>Just down the road in Arlee Montana you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4>
+          <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
+        </div>
       </div>
       <div class="buddhaPhoto">
         <img class="attractionPhotos" src="images/gardenofbuddhas.jpg" alt="Garden of 1000 Buddha's">
@@ -113,9 +124,11 @@
         <img class="attractionPhotos" src="images/flathead.jpg" alt="Flathead Lake">
       </div>
       <div class="flathead">
-        <h3>Flathead Lake</h3>
-        <h4>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4>
-        <h5>Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></h5>
+        <div class="boxForDescriptions">
+          <h3>Flathead Lake</h3>
+          <h4>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4>
+          <h5>Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></h5>
+        </div>
       </div>
 
       </div>
