--- a/RSVP.html
+++ b/RSVP.html
@@ -47,12 +47,10 @@
 
            <div class="collapse navbar-collapse" id="navbar-collapse-1">
              <ul class="nav navbar-nav">
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Home</a></li>
+               <li><a href="index.html">Home</a></li>
                <li><a href="RSVP.html">RSVP</a></li>
                <li><a href="Attractions.html">MT Attractions</a></li>
+               <li><a href="accomodation.html">Accomodation</a></li>
                </ul>
              </div>
         </nav>
