--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
              <div class="collapse navbar-collapse" id="navbar-collapse-1">
                <ul class="nav navbar-nav">
                  <li><a href="location.html">Location</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Home</a></li>
                  <li><a href="RSVP.html">RSVP</a></li>
                  <li><a href="Attractions.html">MT Attractions</a></li>
+                 <li><a href="accomodation.html">Accomodation</a></li>
                  </ul>
                </div>
           </nav>
