--- a/location.html
+++ b/location.html
@@ -55,7 +55,7 @@
       </div>
       <!--end nav container-->
   <body>
-    Jessica and Nereus's wedding will be held in Arlee Montana.
+    Jessica and Nereus's wedding will be held in Arlee goingToMontanaHeader.
 
 
   </body>
