--- a/Attractions.html
+++ b/Attractions.html
@@ -14,7 +14,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Alegreya|Cinzel|Sansita" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4 class="attractionDescription"u" crossorigin="anonymous">
 
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -65,7 +65,7 @@
 
 
       <div class="mt">
-        <h1 title="Montana">So you're going to Montana?
+        <h1 id="goingToMontanaHeader">So you're going to goingToMontanaHeader?
       <br>There are a lot of great things to do and see!</h1>
 
       </div>
@@ -75,8 +75,8 @@
       <div class="glacier">
         <div class="boxForDescriptions">
 
-        <h3>Glacier National Park</h3>
-        <h4>Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4>
+        <h3 class="attractionHeader">Glacier National Park</h3>
+        <h4 class="attractionDescription">Take a day trip or go camping surrounding by breathtaking beauty. You havent quite lived if you havent ridden down The Sun Road!</h4 class="attractionDescription">
         <h5>Learn more about Glacier National Park <a href="https://www.nps.gov/glac/index.htm">Here</a></h5>
       </div>
       </div>
@@ -94,8 +94,8 @@
       </div>
       <div class="yellowstonePhoto">
         <div class="boxForDescriptions">
-          <h3>Yellowstone National Park</h3>
-          <h4>You've already made the trek to Montana, why not travel to the famous Yellowstone National Park?</h4>
+          <h3 class="attractionHeader">Yellowstone National Park</h3>
+          <h4 class="attractionDescription">You've already made the trek to goingToMontanaHeader, why not travel to the famous Yellowstone National Park?</h4 class="attractionDescription">
           <h5>Learn more about Yellowstone National Park <a href="https://www.nps.gov/yell/index.htm">Here</a></h5>
         </div>
       </div>
@@ -107,8 +107,8 @@
 
       <div class="buddha">
         <div class="boxForDescriptions">
-          <h3>Garden of 1000 Buddha's</h3>
-          <h4>Just down the road in Arlee Montana you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4>
+          <h3 class="attractionHeader">Garden of 1000 Buddha's</h3>
+          <h4 class="attractionDescription">Just down the road in Arlee goingToMontanaHeader you will find the Garden of 1000 Buddha's. If you want a place of zen to practice meditation or maybe you are just interested in seeing this awesome site. It is well worth your time and it's free!</h4 class="attractionDescription">
           <h5>Learn more about Garden of 1000 Buddha's <a href="http://www.ewambuddhagarden.org/">Here</a></h5>
         </div>
       </div>
@@ -125,8 +125,8 @@
       </div>
       <div class="flathead">
         <div class="boxForDescriptions">
-          <h3>Flathead Lake</h3>
-          <h4>Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4>
+          <h3 class="attractionHeader">Flathead Lake</h3>
+          <h4 class="attractionDescription">Love the water? Well then you must take a dip in the largest natural freshwater lake west of the Mississippi!</h4 class="attractionDescription">
           <h5>Learn more about Flathead Lake <a href="http://www.visitmt.com/listings/general/lake/flathead-lake.html">Here</a></h5>
         </div>
       </div>
